sandbox/output
StringCalculator.java:9: error: ')' expected
        if (numbers.startWith("//") {
                                   ^
1 error
